1. Fixed issue related to icons not visible (ex - Home button) 2. Added table width as 100% on insured details panel grid and product details grid so that these panels utilize available width and look uniform to other forms in the application

--- a/IBSWeb/WebContent/css/commoncss.css
+++ b/IBSWeb/WebContent/css/commoncss.css
@@ -258,3 +258,5 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febf01', end
 .UWdetailsCls table{
 	width:100%;	
 }
+
+.ui-widget-header .ui-icon{background-image:url("/IBSWeb/faces/javax.faces.resource/images/ui-icons_ffffff_256x240.png?ln=primefaces-aristo");}
